--- a/style.css
+++ b/style.css
@@ -40,4 +40,35 @@ img{
 .name{
     font-size:30px;
 }
-
+#map{
+    display:block;
+    width:75%;
+    margin:0 auto;
+}
+#ad{
+    display:block;
+    text-align:center;
+    border-style:solid;
+    border-color:aliceblue;
+    border-radius: 25px;
+    width:fit-content;
+    margin:0 auto;
+}
+#enroll{
+    border-style:solid;
+    border-color:aliceblue;
+    border-radius: 25px;
+    text-decoration: none;
+    color:white;
+    width:8rem;
+    margin:0 auto;
+}
+.ArmyForm{
+    text-align:left;
+    display:flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+input{
+    width:30%;
+}
